--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="https://umamianal.vercel.app/script.js" data-website-id="de0536dc-9d9c-48de-b7ef-df2020373768"></script>
     <title>Ghetto.NG</title>
   </head>
   <body>
